--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 <body>
     <div class="header">
         <div class="logo">
-            <img src="logo_w.png" alt="">
+            <img src="img/logo_w.png" alt="">
         </div>
         <div class="navigation">
             <ul>
